userService/src/main/java/com/example/userservice/exception/commonException/error/ErrorCode.java
package com.example.userservice.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
